crates/plotnik-tests/tests/03-analyze/self_recursion/no_progress_labeled_alternation_left_recursion.txt
E = [
  Left: (E)
  Right: (x)
]
------------------ DIAGNOSTICS -------------------
error: infinite recursion: cycle makes no progress
 --> query.ptk:2:10
  |
2 |   Left: (E)
  |          ^
  |          |
  |          references itself
  |
help: match at least one syntax-tree node before recursing
help: make every path through this cycle match a syntax-tree node before it returns to `E`
-------------------- SYMBOLS ---------------------
E
  E (cycle)
